<resources>

    <string name="app_name">level2Burger</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="is_student">Is Student</string>
    <string name="sort_by_age">Sort by Age</string>
    <string name="sort_by_student_status">Sort by Student Status</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_description">Sort by Description</string>
    <string name="add_user">Add User</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="date_of_birth">Date of Birth</string>

</resources>

    <string name="app_name">Level 1</string>
    <string name="click_me">Click me</string>
    <string name="_0">0</string>
    <string name="open_click_counter">Open Click Counter</string>
    <string name="number_of_clicks">Number of Clicks:</string>
</resources>
