<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/sortByName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_name"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/sortByAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_age"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/sortByStudentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_student_status"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/sortByDescriptionLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_description"
        android:textSize="18sp"
        android:padding="8dp" />



</LinearLayout>
