<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userDetailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/isStudentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_student"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />




        </LinearLayout>
    </ScrollView>
</RelativeLayout>
